--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -225,6 +225,18 @@ data-show-facepile="false"
     {%endfor%}
     {%endif%}
 
+    <!--======================================================== NEED TO REACH US SECTION ======================================================== -->
+
+
+    <section id="reachUsWhatSection" style="display:none;" class=" homePageNeedReachUs">
+
+
+        <h1 class="homePageNeedReachUsH1">NEED TO REACH US?</h1>
+    
+        <p class="homePageNeedReachUsEmail "><b>Email:</b> <span class="homePageNeedReachUsAddress"> HolinessSingles@gmail.com</span></p>
+    
+        </section>
+
      
 </section>
 
