--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -2,7 +2,7 @@
 {% load static %} 
 {% block metadescription %} 
 {%endblock %} 
-{% block title %} DeeperLifeSingles {% endblock %} 
+{% block title %} HolinessSingles {% endblock %} 
 {% block content%}
 
 <link rel="stylesheet" href="{% static 'css/home.css' %}" />
