--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -29,12 +29,14 @@
 <nav   style=" background-color: #c92020;"  id="navbarMain" class="navbar navbar-expand-lg  border-bottom bg-dark">
 <!-- <nav   style=" background-color: #c92020;"  id="navbarMain" class="navbar navbar-expand-lg  border-bottom "> -->
   <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button id="hamburger" onclick="searchRemover()" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fas fa-bars text-light"></i>
     </button>
+
     <a id="logoNavbar" class="navbar-brand mx-auto mr-3" href="{% url 'website:home' %}"> <img class=" mx-auto" style="width: 170px;" src="{% static 'images/HS.png' %}" alt="Online Cushion Store"></a>
     <a class="navbar-brand" href="#"><img src=""></a>
   
+    <i style="margin-right: 3vw;"  id="searchIconMobile" class="fas fa-search text-light"></i>
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul id="navbarContent" class="navbar-nav mx-auto ">
@@ -51,7 +53,6 @@
         {%endfor%}
 
     </div>
-      <i style="margin-right: 3vw;"  id="searchIconMobile" class="fas fa-search text-light"></i>
   </div>
 </nav>
 
@@ -59,6 +60,15 @@
 
 <script>
 
+const search_Icon = document.getElementById("searchIconMobile");
+const hamburger = document.getElementById("hamburger");
+
+
+
+function searchReover(){
+
+  search_Icon.style.display = "none";
+}
  
 
 </script>
